# noaa-levelii-nexrad-pipeline

./: .gitignore  .gitignore~  .repo-config.json  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.zenflow/tasks/parser-fixes-9402/: plan.md  requirements.md  spec.md
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_asan/Testing/Temporary/: CTestCostData.txt
build_asan/test/code_tests/: CTestTestfile.cmake  Makefile  check_sequence  cmake_install.cmake  test_all_moments  test_aws_initializer  test_decompression  test_fuzz_corrupt_data  test_gate_indexing  test_multi_product  test_parser_metadata  test_quantization  test_real_data  test_threadpool  test_volumetric_generation
build_asan/test/code_tests/test_data/KTLX/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST0/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST1/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST10/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST11/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST12/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST13/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST14/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST15/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST16/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST17/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST18/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST19/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST2/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST20/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST21/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST22/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST23/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST24/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST25/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST26/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST27/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST28/: index_reflectivity.json
build_asan/test/code_tests/test_data/ST29/: index_reflectivity.json
docs/: BUILD.md  DATABASE.md  DATABASE.md~  FILE_FORMAT.md  HTTP.md  RUNNING.md
include/levelii/: AWSInitializer.h  BackgroundFrameFetcher.h  ByteReader.h  DatabaseUtils.h  DecompressionUtils.h  FrameStorageManager.h  MessageSegmenter.h  NEXRAD_Types.h  RLEEncoder.h  RadarFrame.h  RadarParser.h  TerminalUI.h  ThreadPool.h  Version.h  VolumetricGenerator.h  ZlibUtils.h
include/levelii/admin/: AdminAPI.h  AdminServer.h  WebServer.h
python/: pipeline_tree_gen.py  render_radar.py
src/: AWSInitializer.cpp  BackgroundFrameFetcher.cpp  DatabaseUtils.cpp  DecompressionUtils.cpp  FrameStorageManager.cpp  RadarFrame.cpp  RadarParser.cpp  TerminalUI.cpp  ThreadPool.cpp  VolumetricGenerator.cpp  ZlibUtils.cpp  nexrad_pipeline.cpp  nexrad_pipeline.cpp~  process_to_volumetric.cpp
src/admin/: AdminAPI.cpp  AdminServer.cpp  WebServer.cpp
test/code_tests/: CMakeLists.txt
test/code_tests/integration/: repro_munmap.cpp
test_data/ST0/: index_reflectivity.json
test_data/ST1/: index_reflectivity.json
test_data/ST10/: index_reflectivity.json
test_data/ST11/: index_reflectivity.json
test_data/ST12/: index_reflectivity.json
test_data/ST13/: index_reflectivity.json
test_data/ST14/: index_reflectivity.json
test_data/ST15/: index_reflectivity.json
test_data/ST16/: index_reflectivity.json
test_data/ST17/: index_reflectivity.json
test_data/ST18/: index_reflectivity.json
test_data/ST19/: index_reflectivity.json
test_data/ST2/: index_reflectivity.json
test_data/ST20/: index_reflectivity.json
test_data/ST21/: index_reflectivity.json
test_data/ST22/: index_reflectivity.json
test_data/ST23/: index_reflectivity.json
test_data/ST24/: index_reflectivity.json
test_data/ST25/: index_reflectivity.json
test_data/ST26/: index_reflectivity.json
test_data/ST27/: index_reflectivity.json
test_data/ST28/: index_reflectivity.json
test_data/ST29/: index_reflectivity.json
test_data/ST3/: index_reflectivity.json
test_data/ST30/: index_reflectivity.json
test_data/ST31/: index_reflectivity.json
test_data/ST32/: index_reflectivity.json
test_data/ST33/: index_reflectivity.json
test_data/ST34/: index_reflectivity.json
test_data/ST35/: index_reflectivity.json
test_data/ST36/: index_reflectivity.json
test_data/ST37/: index_reflectivity.json
test_data/ST38/: index_reflectivity.json
test_data/ST39/: index_reflectivity.json
test_data/ST4/: index_reflectivity.json
test_data/ST40/: index_reflectivity.json
test_data/ST41/: index_reflectivity.json
test_data/ST42/: index_reflectivity.json
test_data/ST43/: index_reflectivity.json
test_data/ST44/: index_reflectivity.json
test_data/ST45/: index_reflectivity.json
test_data/ST46/: index_reflectivity.json
test_data/ST47/: index_reflectivity.json
test_data/ST48/: index_reflectivity.json
test_data/ST49/: index_reflectivity.json
test_data/ST5/: index_reflectivity.json
test_data/ST6/: index_reflectivity.json
test_data/ST7/: index_reflectivity.json
test_data/ST8/: index_reflectivity.json
test_data/ST9/: index_reflectivity.json
test_files/: KTLX20260209_162244_V06
tests/: CMakeLists.txt
tests/fuzz/: test_fuzz_corrupt_data.cpp
tests/integration/: benchmark_encoding.cpp  benchmark_memory_concurrency.cpp  check_sequence.cpp  test_real_data.cpp  test_volumetric_generation.cpp
tests/unit/: test_all_moments.cpp  test_aws_initializer.cpp  test_config_manager.cpp  test_decompression.cpp  test_frame_storage.cpp  test_gate_indexing.cpp  test_multi_product.cpp  test_parser_metadata.cpp  test_quantization.cpp  test_threadpool.cpp
(+28 files in other folders)
